<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBAF4B"
    android:orientation="vertical"
    tools:context=".fragments.AboutUsFragment">


    <TextView
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:padding="20dp"
        android:text="@string/aboutUs1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutUs2"
        android:textColor="@color/white"
        android:padding="20dp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutUs3"
        android:textColor="@color/white"
        android:padding="20dp"
        android:textStyle="bold"
        android:fontFamily="serif"
        android:textSize="25sp"/>

</LinearLayout>