<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3C3E8"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".security.ForgetPassword">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:src="@drawable/book_stack" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:letterSpacing="0.02"
        android:text="@string/forgetPass_textView"
        android:textAlignment="center"
        android:textColor="@color/purple_custom"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_weight="0.1" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailAddress_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/emailAddress_text"
        app:boxStrokeColor="@color/purple_700"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:counterTextColor="@color/purple_700"
        app:endIconMode="clear_text"
        app:endIconTint="@color/red"
        android:textColorHint="@color/purple_custom"
        app:hintTextColor="@color/purple_700"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/purple_custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:maxLength="31" />


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumber_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/phoneNumber_text"
        app:boxStrokeColor="@color/purple_700"
        app:counterEnabled="true"
        app:counterMaxLength="9"
        app:counterTextColor="@color/purple_700"
        app:endIconMode="clear_text"
        app:endIconTint="@color/red"
        android:textColorHint="@color/purple_custom"
        app:hintTextColor="@color/purple_700"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        app:startIconTint="@color/purple_custom"
        app:prefixText="+962"
        app:prefixTextColor="@color/purple_custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:maxLength="10" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/password_text"
        app:boxStrokeColor="@color/purple_700"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:counterTextColor="@color/purple_700"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/purple_custom"
        app:hintTextColor="@color/purple_700"
        android:textColorHint="@color/purple_custom"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/purple_custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:maxLength="9" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reEnterPassword_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/reEnterPassword_text"
        app:boxStrokeColor="@color/purple_700"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:counterTextColor="@color/purple_700"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/purple_custom"
        app:hintTextColor="@color/purple_700"
        android:textColorHint="@color/purple_custom"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/purple_custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:maxLength="9" />


    </com.google.android.material.textfield.TextInputLayout>



    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reSetPassword_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/reSetPass_button"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:background="@drawable/button_shape_1"
        android:backgroundTint="@color/orange"
        />




</LinearLayout>