<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A3C3E8"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".security.SignUpScreen">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="3"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:src="@drawable/book_stack" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:letterSpacing="0.02"
            android:text="@string/signup_textView"
            android:textAlignment="center"
            android:textColor="@color/purple_custom"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>





    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.6" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userName_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:counterEnabled="true"
        android:textColorHint="@color/purple_custom"
        app:boxStrokeColor="@color/purple_700"
        app:counterMaxLength="30"
        app:counterTextColor="@color/purple_700"
        app:endIconMode="clear_text"
        app:endIconTint="@color/red"
        app:hintTextColor="@color/purple_700"
        app:startIconDrawable="@drawable/ic_person"
        app:startIconTint="@color/purple_custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:maxLength="31"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailAddress_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emailAddress_text"
        app:counterEnabled="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/purple_custom"
        app:boxStrokeColor="@color/purple_700"
        app:counterMaxLength="30"
        app:counterTextColor="@color/purple_700"
        app:endIconMode="clear_text"
        app:endIconTint="@color/red"
        app:hintTextColor="@color/purple_700"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/purple_custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="31"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        app:counterEnabled="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/purple_custom"
        app:boxStrokeColor="@color/purple_700"
        app:counterMaxLength="8"
        app:counterTextColor="@color/purple_700"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/purple_custom"
        app:hintTextColor="@color/purple_700"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/purple_custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="9"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reEnterPassword_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reEnterPassword_text"
        app:counterEnabled="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/purple_custom"
        app:boxStrokeColor="@color/purple_700"
        app:counterMaxLength="8"
        app:counterTextColor="@color/purple_700"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/purple_custom"
        app:hintTextColor="@color/purple_700"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:startIconTint="@color/purple_custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="9"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumber_textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneNumber_text"
        app:counterEnabled="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/purple_custom"
        app:boxStrokeColor="@color/purple_700"
        app:counterMaxLength="9"
        app:counterTextColor="@color/purple_700"
        app:endIconMode="clear_text"
        app:endIconTint="@color/red"
        app:hintTextColor="@color/purple_700"
        app:prefixText="+962"
        app:prefixTextColor="@color/purple_custom"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        app:startIconTint="@color/purple_custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/purple_700"
            android:textStyle="bold" />


    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_shape_1"
        android:backgroundTint="@color/orange"
        android:text="@string/create_button"
        android:textAllCaps="false"
        android:textSize="20sp" />


</LinearLayout>